# gbcater

./: .gitignore  README.md  pyproject.toml
data/: all_games.csv
gbcater/: __main__.py  cart_hardware.py  cartridge.py  utils.py
