[tool.poetry]
name = "gbcater"
version = "0.1.0"
description = "Parser for determining Game Boy metadata based on ROM files"
authors = ["k <k@kidotai.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
attrs = "^22.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
